@@ -1,4 +1,8 @@
 2012-10-23  Jean-Louis Martineau <martineau@zmanda.com>
+	* ndmp-src/ndmpconnobj.c: Use event_create and event_activate.
+	  Create static notify_data_t.
+
+2012-10-23  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/event.c (event_create, event_activate): New function, it
 	  split event_register in two.
 	* common-src/event.h (event_create, event_activate): New prototype.
